hashicorpvault/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hashicorpvault
  namespace: hashicorpvault
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hashicorpvault.cgraaaj.in`)
      kind: Rule
      services:
        - name: hashicorpvault
          port: 8200
  tls:
    secretName: wildcard-cgraaaj-in-tls
